--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ShukaRip</title>
+  <title>Shukaaa's Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/jpg" href="./assets/hello.jpg">
   <script src="https://kit.fontawesome.com/5bf597b54b.js" crossorigin="anonymous"></script>
 </head>
 <body>
