Added Project Page

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Shukaaa's Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/jpg" href="./assets/hello.jpg">
+  <link rel="icon" type="image/jpg" href="assets/img/hello.jpg">
   <script src="https://kit.fontawesome.com/5bf597b54b.js" crossorigin="anonymous"></script>
 </head>
 <body>
